--- a/app/styles/ap-basico.styl
+++ b/app/styles/ap-basico.styl
@@ -53,4 +53,28 @@ html
 input:-webkit-autofill 
 	-webkit-box-shadow 0 0 0px 1000px white inset
 	
+.lado 
+	position  absolute
+	left  0
+	top  0
+	width  100%
+	height  100%
+
+.lado.ng-enter,
+.lado.ng-leave 
+	-webkit-transition  left 1s ease
+	transition  left 1s ease
+
+.lado.ng-enter 
+	left  100%
+
+.lado.ng-enter-active 
+	left  0
+
+.lado.ng-leave 
+	left  0
+
+.lado.ng-leave-active 
+	left  -100%
+	
 /* BASICO FINAL */
