--- a/app/views/privado.html
+++ b/app/views/privado.html
@@ -1,1 +1,4 @@
-<p>This is the about view.</p>
+<div class="row">
+  <img src="images/privado.jpg" alt="">
+</div>
+<div class="row" style="height:800px"></div>
