--- a/app/views/servicios.html
+++ b/app/views/servicios.html
@@ -1,1 +1,4 @@
-<h2>SERVICIOS</h2>
+<div class="row">
+  <img src="images/servicios.jpg" alt="">
+</div>
+<div class="row" style="height:800px"></div>
