--- a/app/styles/ap-media-800.styl
+++ b/app/styles/ap-media-800.styl
@@ -1,7 +1,10 @@
 @media screen and (max-width 800px)
 	
-	.menu
-		display none
+	.navegador .tactil
+		top 10px
+		right 70px
 		
-	.navegador
-		display block
+	#btnIngresar
+		top 10px
+		right 10px
+			
