--- a/app/styles/ap-basico.styl
+++ b/app/styles/ap-basico.styl
@@ -6,6 +6,8 @@ html
 	background-color lighten(negro,5%)
 	overflow-x hidden
 	font-family 'Roboto', sans-serif
+	font-weight 400
+	overflow-x hidden
 	
 .sombra1
 	textShadow(0px 1px 2px negro)
@@ -15,6 +17,12 @@ html
    
 .texto-blanco
 	color alpha(blanco,90%) !important
+	
+.texto-gris
+	color alpha(gris,90%) !important
+	
+.texto-gris-2
+	color alpha(gris,30%) !important
 	
 .texto-rosa
 	color alpha(rosa,80%) !important
@@ -53,5 +61,6 @@ html
 input:-webkit-autofill 
 	-webkit-box-shadow 0 0 0px 1000px white inset
 
-	
+.lean-overlay
+	opacity 0.8 !important
 /* BASICO FINAL */
