--- a/app/styles/ap-media-800.styl
+++ b/app/styles/ap-media-800.styl
@@ -3,8 +3,12 @@
 	.navegador .tactil
 		top 10px
 		right 70px
+		position absolute
 		
 	#btnIngresar
 		top 10px
 		right 10px
-			
+		
+	#logo
+		top 5px
+		left 10px
