--- a/app/views/privado.html
+++ b/app/views/privado.html
@@ -1,4 +1,4 @@
-<div class="row">
-  <img src="images/privado.jpg" alt="">
+<div class="row" style="overflow-x:hidden">
+  <img ng-src="{{imagenPrivado}}" alt="">
 </div>
 <div class="row" style="height:800px"></div>
