--- a/app/views/servicios.html
+++ b/app/views/servicios.html
@@ -1,4 +1,4 @@
-<div class="row">
-  <img src="images/servicios.jpg" alt="">
+<div class="row" style="overflow-x:hidden">
+  <img ng-src="{{imagenServicios}}" alt="" width="100%">
 </div>
 <div class="row" style="height:800px"></div>
