--- a/app/styles/ap-encabezado.styl
+++ b/app/styles/ap-encabezado.styl
@@ -1,7 +1,9 @@
 /* ENCABEZADO */
 
-.tabs .indicator
-	background-color principal !important
+#logo
+	position absolute
+	top 45px
+	left 30px
 
 #menu
 	color blanco
@@ -23,7 +25,7 @@
 	position fixed
 	top 0
 	width 100%
-	height 0%
+	height 1%
 	z-index 1020
 	//background-color red
 	
@@ -50,7 +52,7 @@
 		color principal !important
 	
 #btnMenu 
-	transition  .4s all ease-out
+	transition  .4s opacity ease-out, .4s right ease-out
 	position absolute
 	right 0px
 
@@ -62,7 +64,7 @@
 	opacity  0
 	
 #btnCerrar 
-	transition  .4s all ease-out
+	transition  .4s opacity ease-out, .4s left ease-out
 	position absolute
 	left 0px
 	opacity  1
@@ -75,7 +77,7 @@
 	opacity  0
 	
 #donde 
-	transition  .3s all ease-out
+	transition  .3s opacity ease-out
 
 #donde.ng-hide-add, #donde.ng-hide-remove
 	display  block !important 
@@ -84,7 +86,7 @@
 	opacity  0
 	
 #cerrar 
-	transition  .3s all ease-out
+	transition  .3s opacity ease-out
 	
 #cerrar.ng-hide-add, #cerrar.ng-hide-remove
 	display  block !important 
@@ -98,7 +100,7 @@
 	right 40px
 	
 #btnIngresar 
-	transition  .3s all ease-out
+	transition  .3s opacity ease-out
 
 #btnIngresar.ng-hide-add, #btnIngresar.ng-hide-remove
 	display  block !important 
@@ -113,3 +115,23 @@
 	display none
 	//background-color red
 	top 0
+	
+.mensaje
+	width 100%
+	//background-color red
+	height 20px
+	
+.socialMedia
+	//background-color red
+	width 100%
+	height 70px
+	margin-top 20px
+	
+	& a:hover
+		background-color alpha(negro,40%)
+		
+	& a:hover > i
+		color principal
+		
+.separador
+	margin 10px
