--- a/app/styles/ap-basico.styl
+++ b/app/styles/ap-basico.styl
@@ -7,6 +7,8 @@ html
 	overflow-x hidden
 	font-family 'Roboto', sans-serif
 	font-weight 400
+	
+body 
 	overflow-x hidden
 	
 .sombra1
@@ -63,4 +65,9 @@ input:-webkit-autofill
 
 .lean-overlay
 	opacity 0.8 !important
+	
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-    ng-cloak 
+	display none !important
+    
+	
 /* BASICO FINAL */
