--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -11,6 +11,8 @@ html {
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
+}
+body {
   overflow-x: hidden;
 }
 .sombra1 {
@@ -72,6 +74,14 @@ input:-webkit-autofill {
 .lean-overlay {
   opacity: 0.8 !important;
 }
+[ng:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x- ng-cloak {
+  display: none !important;
+}
 #logo {
   position: absolute;
   top: 45px;
@@ -94,7 +104,7 @@ input:-webkit-autofill {
 }
 .navegador {
   display: block;
-  position: fixed;
+  position: absolute;
   top: 0;
   width: 100%;
   height: 1%;
@@ -222,7 +232,6 @@ input:-webkit-autofill {
   .navegador .tactil {
     top: 10px;
     right: 70px;
-    position: absolute;
   }
   #btnIngresar {
     top: 10px;
