--- a/app/styles/ap-basico.styl
+++ b/app/styles/ap-basico.styl
@@ -69,5 +69,16 @@ input:-webkit-autofill
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-    ng-cloak 
 	display none !important
     
+.centrar-texto
+	text-align center
+	
+.centrar-div
+	width 280px
+	margin 0 auto
+	
+#map 
+	height 400px
+	margin 20px 0
+
 	
 /* BASICO FINAL */
