--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -82,6 +82,17 @@ input:-webkit-autofill {
 .x- ng-cloak {
   display: none !important;
 }
+.centrar-texto {
+  text-align: center;
+}
+.centrar-div {
+  width: 280px;
+  margin: 0 auto;
+}
+#map {
+  height: 400px;
+  margin: 20px 0;
+}
 #logo {
   position: absolute;
   top: 45px;
