privado mapa funcionando

--- a/app/views/privado.html
+++ b/app/views/privado.html
@@ -208,6 +208,8 @@
 		    </ul>
 		</div>
 
+		<div style="clear: both;"></div>
+
 		<div class="col s12 m12 l4">
 			<div class="section">
 			    <h5>Celular</h5>
